--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "ptn-file-parser",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Parse PTN (Portable Tak Notation) files",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/PtnFileParser.js",
+  "types": "dist/PtnFileParser.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "mocha --reporter spec",
+    "lint": "prettier --config .prettierrc --ignore-path .gitignore --check '**/*.{ts,tsx}' && tslint -c tslint.json --project tsconfig.json && jscpd --config jscpd.json src",
+    "format": "prettier --config .prettierrc --ignore-path .gitignore --write '**/*.{ts,tsx}' && tslint -c tslint.json --project tsconfig.json --fix",
+    "test": "ts-mocha --reporter spec test/*.ts",
     "cover": "nyc --reporter=lcov --show-process-tree npm run test"
   },
   "repository": {
@@ -27,10 +29,21 @@
   },
   "homepage": "https://github.com/tak-stuff/ptn-file-parser#readme",
   "devDependencies": {
+    "@types/chai": "^4.2.8",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^7.0.1",
+    "@types/node": "^13.7.0",
     "chai": "^4.2.0",
     "coveralls": "^3.0.7",
+    "jscpd": "2.0.16",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
+    "prettier": "1.19.1",
+    "ts-mocha": "^6.0.0",
+    "ts-node": "8.6.2",
+    "tslint": "5.20.1",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-eslint-rules": "5.4.0",
     "typescript": "^3.6.4"
   }
 }
