--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,29 @@
 {
+  "include": ["lib"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "target": "es2018",
     "module": "commonjs",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "sourceMap": true,
+    "pretty": true,
+    "allowJs": false,
+    "alwaysStrict": false,
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "types": ["node", "mocha"],
+    "importHelpers": true,
+    "noImplicitAny": true,
     "declaration": true,
-    "outDir": "./dist",
-    "strict": true
+    "outDir": "./dist"
   }
 }
